--- a/angular/src/app/mascota/nueva-mascota.component.html
+++ b/angular/src/app/mascota/nueva-mascota.component.html
@@ -17,7 +17,7 @@
 
     <div class="form-group">
         <label>Fecha de Nacimiento:</label>
-        <ng-datepicker class="form-control" name="birthDate" [options]="{ displayFormat: 'DD/MM/YYYY', locale : arLocale, barTitleIfEmpty: 'Click para seleccionar'}" [(ngModel)]="mascota.birthDate" [class.errorBorder]="!mascota.birthDate || errors['birthDate']"></ng-datepicker>
+        <ng-datepicker class="form-control" name="birthDate" [options]="{ displayFormat: 'DD/MM/YYYY', locale : arLocale}" [(ngModel)]="mascota.birthDate" [class.errorBorder]="!mascota.birthDate || errors['birthDate']"></ng-datepicker>
 
         <div *ngIf="errors.birthDate" class="error">
             {{errors.birthDate}}
