--- a/angular/src/app/welcome/welcome.component.html
+++ b/angular/src/app/welcome/welcome.component.html
@@ -1,4 +1,5 @@
-<table class="formClass">
+
+<table class="jubotron">
     <tr>
         <td colspan="2">
             <div class="title">Mascotas - Programacion Avanzada UTN</div>
