--- a/angular/src/app/menu/menu.component.html
+++ b/angular/src/app/menu/menu.component.html
@@ -1,50 +1,60 @@
 <!--Si hay un usuario logueado, se usa este menu-->
-<div class="pageHeader">
-    <div class='inlineContent menu' *ngIf="usuarioLogueado">
-        <input type="button" class="menuButton" [routerLink]="['/perfilUsuario']" value="Perfil" />
-    </div>
-
-
-    <div class='inlineContent menu' *ngIf="usuarioLogueado">
-        <input type="button" class="menuButton" [routerLink]="['/mascotas']" value="Mascotas" />
-    </div>
-
-    <div class='inlineContent menu' *ngIf="usuarioLogueado">
-        <input type="button" class="menuButton" [routerLink]="['/amigos']" value="Buscar Amigos" />
-    </div>
-
-    <div class='inlineContent userLoggedIn' *ngIf="usuarioLogueado">
-        <img src="assets/logout.png" class="errorIcon" alt="Cerrar sesi&oacute;n" title="Cerrar sesi&oacute;n" (click)="logout()" /> <label> {{ usuarioLogueado.name }}
-		</label>
-    </div>
-
-    <!--Si el usuario no está logueado, aparece este menu-->
-    <form name="form" [formGroup]="loginForm" *ngIf="!usuarioLogueado">
-        <div class='inlineContent'>
-            <label> Login </label>
+<div class="heading">
+        <div>
+            <img src="assets/paw.png" [routerLink]="['/']" class="menuIcon" title="PetsApp Home">
         </div>
 
-        <div class='inlineContent'>
-            <input name="login" formControlName="username" type="text" placeholder="Usuario" />
-            <img src="assets/error.png" *ngIf="loginForm.controls.username.dirty && !loginForm.controls.username.valid" class="errorIcon" alt="Ingrese su nombre de usuario." title="Ingrese su nombre de usuario." />
-        </div>
+        <div class="pageHeader">
+            <div class='inlineContent menu' *ngIf="usuarioLogueado; else notLoggedIn">
 
-        <div class='inlineContent'>
-            <input name="password" formControlName="password" type="password" />
+                        <input type="button" class="menuButton" [routerLink]="['/perfilUsuario']" value="Perfil" />
+                
+                        <input type="button" class="menuButton" [routerLink]="['/mascotas']" value="Mascotas" />
+            
+                        <input type="button" class="menuButton" [routerLink]="['/amigos']" value="Buscar Amigos" />
+                <div class='inlineContent userLoggedIn'>
+                    <label> {{ usuarioLogueado.name }}</label>
+                    <img src="assets/logout.png" class="logoutIcon" alt="Cerrar sesi&oacute;n" title="Cerrar sesi&oacute;n" (click)="logout()" /> 
+                </div>
+                
+            
+            </div>
 
-            <img src="assets/error.png" *ngIf="loginForm.controls.password.dirty && !loginForm.controls.password.valid" class="errorIcon" alt="Contraseña no valida." title="Contraseña no valida." />
-        </div>
+            <!--Si el usuario no está logueado, aparece este menu-->
+            <ng-template #notLoggedIn>
+            
+            <form name="form" [formGroup]="loginForm">
+                <div class='inlineContent'>
+                    <label> Usuario: </label>
+                </div>
 
-        <div class='inlineContent'>
-            <img src="assets/error.png" *ngIf="errorMessage" class="errorIcon" [alt]="errorMessage" [title]="errorMessage" />
-        </div>
+                <div class='inlineContent'>
+                    <input name="login" formControlName="username" type="text" placeholder="Usuario" />
+                    <img src="assets/error.png" *ngIf="loginForm.controls.username.dirty && !loginForm.controls.username.valid" class="errorIcon" alt="Ingrese su nombre de usuario." title="Ingrese su nombre de usuario." />
+                </div>
 
-        <div class='inlineContent'>
-            <input type="button" [routerLink]="['/registrarUsuario']" class="barFormBack" value="Registrarse" />
-        </div>
+                <div class='inlineContent'>
+                    <label> Contraseña: </label>
+                </div>
 
-        <div class='inlineContent'>
-            <input type="button" class="barFormButton" (click)="login()" value="Login" [disabled]="!loginForm.valid" />
+                <div class='inlineContent'>
+                    <input name="password" formControlName="password" type="password" />
+
+                    <img src="assets/error.png" *ngIf="loginForm.controls.password.dirty && !loginForm.controls.password.valid" class="errorIcon" alt="Contraseña no valida." title="Contraseña no valida." />
+                </div>
+
+                <div class='inlineContent'>
+                    <img src="assets/error.png" *ngIf="errorMessage" class="errorIcon" [alt]="errorMessage" [title]="errorMessage" />
+                </div>
+
+                <div class='inlineContent'>
+                    <input type="button" [routerLink]="['/registrarUsuario']" class="btn btn-secondary btn-sm" value="Registrarse" />
+                </div>
+
+                <div class='inlineContent'>
+                    <input type="button" class="btn btn-primary btn-sm" (click)="login()" value="Login" [disabled]="!loginForm.valid" />
+                </div>
+            </form>
+        </ng-template>
         </div>
-    </form>
 </div>
