--- a/angular/src/styles.css
+++ b/angular/src/styles.css
@@ -1,8 +1,21 @@
+.heading{
+	width: 100%;
+	background: #4072B4;
+	height: 50px;
+	display: flex;
+}
 
 .pageHeader {
 	width: 100%;
 	background: #4072B4;
-	height: 32px;
+	height: 50px;
+	padding-left: 15px;
+}
+
+.pageIcon{
+	width: -webkit-fit-content;
+	height: -webkit-fit-content;
+	background: #4072B4;
 }
 
 .pageHeader label {
@@ -22,16 +35,29 @@
 	font-weight: bold;
 	background: transparent;
 	border: none;
+	line-height: 50px;
+	height: 100%;
+}
+
+.menuButton:hover {
+	background: rgb(0, 132, 255);
 }
 
 .pageHeader .menu {
 	float: left;
-	margin: 5px;
+	width: 100%;
+	height: 100%;
+}
+
+.menuIcon {
+	width: 50px;
+	padding: 5px;
+	cursor: pointer;
 }
 
 .pageHeader .userLoggedIn {
 	float: right;
-	margin: 5px;
+	margin: 12px;
 }
 
 .inlineContent {
@@ -171,6 +197,10 @@ table tr:active td {
 	border-left: 5px solid #a94442; /* red */
 }
 
+.logoutIcon {
+	cursor: pointer;
+	width: 25px;
+}
 
 .error {
 	color: #a94442;
