--- a/angular/src/app/perfil/perfil.component.html
+++ b/angular/src/app/perfil/perfil.component.html
@@ -16,17 +16,18 @@
         </div>
     </div>
 
-    
-    <div class="form-group">
-        <label>Imagen:</label>
+    <div class="input-group mb-2">
+        <div class="input-group-prepend">
+            <span class="input-group-text" id="Imagen">Imagen</span>
+        </div>
         <file-upload name="imagen" allowedTypes="image/*" uploadButtonText="Upload File" [ngModel]="imagenPerfil.image" (ngModelChange)="actualizarImagen($event)"></file-upload>
     </div>
 
-    <div class="form-group">
-        <label>Email:</label>
-
-        <input name="email" [(ngModel)]="perfil.email" type="text" placeholder="Email" size="60" />
-
+    <div class="input-group mb-2">
+        <div class="input-group-prepend">
+          <span class="input-group-text" id="nombre">Correo</span>
+        </div>
+        <input type="email" [(ngModel)]="perfil.email" class="form-control" placeholder="nombre@ejemplo.com" aria-describedby="basic-addon3">
         <div *ngIf="f.controls.email?.invalid && f.controls.email?.touched" class="error">
             Valor no v&aacute;lido.
         </div>
@@ -36,8 +37,10 @@
         </div>
     </div>
 
-    <div class="form-group">
-        <label>Provincia:</label>
+    <div class="input-group mb-2">
+        <div class="input-group-prepend">
+          <span class="input-group-text" id="provincia">Provincia</span>
+        </div>
 
         <select name='province' [(ngModel)]="perfil.province">
 			<option *ngFor="let item of provincias" [value]="item._id" >{{item.name}}</option>
@@ -52,11 +55,12 @@
         </div>
     </div>
 
-    <div class="form-group">
-        <label>Direcci&oacute;n:</label>
-
-        <input name="address" [(ngModel)]="perfil.address" type="text" placeholder="Direcci&oacute;n" size="60" />
-
+    <div class="input-group mb-2">
+        <div class="input-group-prepend">
+          <span class="input-group-text" id="address">Direcci&oacute;n</span>
+        </div>
+        <input type="address" [(ngModel)]="perfil.address" class="form-control" placeholder="Direcci&oacute;n" aria-describedby="basic-addon3">
+        
         <div *ngIf="f.controls.address?.invalid && f.controls.address?.touched" class="error">
             Valor no v&aacute;lido.
         </div>
@@ -66,11 +70,11 @@
         </div>
     </div>
 
-    <div class="form-group">
-        <label>Tel&eacute;fono:</label>
-
-        <input name="phone" [(ngModel)]="perfil.phone" type="text" placeholder="Tel&eacute;fono" size="60" />
-
+    <div class="input-group mb-2">
+        <div class="input-group-prepend">
+          <span class="input-group-text" id="telefono">Tel&eacute;fono</span>
+        </div>
+        <input type="phone" [(ngModel)]="perfil.phone" class="form-control" placeholder="Tel&eacute;fono" aria-describedby="basic-addon3">
         <div *ngIf="f.controls.phone?.invalid && f.controls.phone?.touched" class="error">
             Valor no v&aacute;lido.
         </div>
@@ -81,5 +85,5 @@
     </div>
 
     <button class="btn btn-success" (click)="submitForm()" [disabled]="f.invalid">Guardar</button>
-    <button class="btn btn-default" [routerLink]="['/']">Cancelar</button>
+    <button class="btn btn-outline-default" [routerLink]="['/']">Cancelar</button>
 </form>
